--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,87 @@
 *{
     box-sizing: border-box;
+    margin: 0%;
 }
+
 ul,ol{
     padding: 0;
 }
+
 li{
     list-style-type: none;
 }
+
 .logoheader{
     border-radius: 90%;
-    width: 10%;
+    width: 30%;
+    margin: 15px;
+    margin-bottom: 0%;
 }
+
+.buscar{
+    margin: 15px;
+    margin-top: 0%;
+}
+
+.menu{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.barratexto{
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 15px;
+}
+
 .instagram{
     width: 18%;
 }
 
-body{
-    background-color: rgb(48, 148, 148);
+.container{
+    background-color: black;
+}
+
+.titulos{
+    color: black;
+}
+
+.user{
+    color: black;
+    text-decoration: underline;
+    font-weight: bold;
+    margin: 15px;
 }
 
 header{
     background-color: white;
     border: solid 3px black;
-    margin-bottom: 15px;
+    
 }
+
 .cajainicio{
-    background-color: blueviolet;
+    background-color: white;
     margin-bottom: 20px;
-    border: solid 3px white;
 }
 body{
     border: solid 3px black;
-    background-color: chartreuse;
+    background-color: white;
 }
 
+.fotochanges{
+    height: 20%;
+    width: 20%;
+    border: 3px solid black;
+}
 
+.listadetallealbum{
+    list-style-type: square;
+}
 
 .listas{
     background-color: yellow;
@@ -51,13 +98,20 @@ a{
 
 .caja{
     width: 20%;
-    background-color: black;
+    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
     text-align: center;
 }
+.names{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    margin: 10px;
+}
+
 .caja img{
     width: 100%;
 }
@@ -75,6 +129,7 @@ footer{
 .equipo{
     background-color: cornsilk;
 }
+
 .containergenerosg{
         background-color: rgb(31, 138, 84);
         border: solid 3px rgb(216, 9, 9);
