cambios jus y fondo negro

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0%;
+    
 }
 
 ul,ol{
@@ -24,6 +25,7 @@ li{
 }
 
 .menu{
+    color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -33,7 +35,7 @@ li{
 }
 
 .barratexto{
-    color: black;
+    color: white;
     font-weight: bold;
     text-decoration: none;
     margin: 15px;
@@ -48,35 +50,34 @@ li{
 }
 
 .titulos{
-    color: black;
+    color: white;
 }
 
 .user{
-    color: black;
+    color: white;
     text-decoration: underline;
     font-weight: bold;
     margin: 15px;
 }
 
 header{
-    background-color: white;
-    border: solid 3px black;
+    background-color: black;
     
 }
 
 .cajainicio{
-    background-color: white;
+    background-color: black;
     margin-bottom: 20px;
 }
 body{
-    border: solid 3px black;
-    background-color: white;
+  
+    background-color: black;
 }
 
 .fotochanges{
     height: 20%;
     width: 20%;
-    border: 3px solid black;
+ 
 }
 
 .listadetallealbum{
@@ -85,7 +86,7 @@ body{
 
 .listas{
     background-color: yellow;
-    border: solid 3px black;
+   
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -98,7 +99,7 @@ a{
 
 .caja{
     width: 20%;
-    background-color: blueviolet;
+    background-color:black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,7 +108,7 @@ a{
 }
 .names{
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
     margin: 10px;
 }
@@ -123,9 +124,7 @@ a{
 }
 
 footer{
-   margin-left: 30px;
-   margin-top: 20px;
-   margin-bottom: 30px;
+    border:solid 8px black;
    background-color: black;
    color: white;
    text-align: center;
