--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,13 @@ body{
 .fotochanges{
     height: 20%;
     width: 20%;
- 
+    margin: 15px;
 }
 
 .listadetallealbum{
     list-style-type: square;
+    color: cornsilk;
+    margin: 15px;
 }
 
 .listas{
@@ -212,6 +214,21 @@ footer{
 }
 .slider li img{
     width: 100%;
+}
+.justin{
+    color: cornsilk;
+}
+
+.nombre{
+    color: cornsilk;
+}
+
+.detallealbum{
+    color: cornsilk;
+    margin: 20px;
+}
+.textochanges{
+    margin: 15px;
 }
 
 @keyframes cambio {
