--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,12 @@ li{
 
 .titulos{
     color: black;
-    background-color: blueviolet;
+    background-color: rgb(49, 127, 218);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    margin: 20px;
-    box-shadow: -4px 0 15px blueviolet;    
+    margin: 20px; 
 }
 
 .user{
@@ -247,12 +246,20 @@ footer{
     color: cornsilk;
     margin: 20px;
 }
-.textochanges{
+.texto{
     margin: 15px;
 }
-.marley{
+.artista{
     color: white;
-    margin: 10px;
+    width: 17%;
+    background-color:black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+    margin: 20px;
+    border-radius: 15px;
 }
 
 .fotobob{
@@ -265,7 +272,7 @@ footer{
     margin: 10px;
 }
 .acaja{
-    border: 3px solid blueviolet;
+    border: 3px solid rgb(49, 127, 218);
 }
 
 @keyframes cambio {
@@ -282,9 +289,36 @@ footer{
     100% {margin-left:-300%; }
 }
 .pag{
-    background-color: blueviolet;
+    background-color: rgb(49, 127, 218);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+}
+.detallealbum{
+    background-color:rgb(49, 127, 218);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+}
+.album{
+    color: white;
+    width: 17%;
+    background-color:black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+    margin: 20px;
+    border-radius: 15px;
+}
+.fotoalbum{
+    width: 180px;
+    height: 180px;
+    border-radius: 90%;
+}
+.listadetallealbum{
+    background-color: black;
 }
