--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ footer{
     margin: 20px;
     border-radius: 15px;
 }
-.fotoalbum{
+.fotoa{
     width: 180px;
     height: 180px;
     border-radius: 90%;
