--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0%;
-    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 ul,ol{
