--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,18 @@
     margin: 0%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
-
 ul,ol{
     padding: 0;
 }
-
-
 li{
     list-style-type: none;
 }
-
 .logo{
     border-radius: 48%;
     width: auto;
     height: 170px;
     margin-top: 20px;
 }
-
 .buscar{
     margin: 20px;
     margin-top: 20px;
@@ -40,14 +35,12 @@ li{
     align-items: center;
     margin-right: 40px;
 }
-
 .barratexto{
     color: rgb(0, 255, 21);
     font-weight: bold;
     text-decoration: none;
     margin: 15px;
 }
-
 .instagram{
     width: 18%;
     margin: 15px;
@@ -57,12 +50,10 @@ li{
     justify-content: flex-start;
     align-items: flex-start;
 }
-
 .container{
     background-color: black;
 
 }
-
 .titulos{
     color: rgb(0, 255, 21);
     display: flex;
@@ -71,35 +62,28 @@ li{
     justify-content: center;
     margin: 20px; 
 }
-
 .user{
     color: rgb(0, 255, 234);
     text-decoration: underline;
     font-weight: bold;
     margin-left: 20px;
 }
-
 header{
     background-color: black;
     
 }
-
 .cajainicio{
     background-color: black;
     margin-bottom: 20px;
 }
-
 body{
-  
     background-color: black;
 }
-
 .fotochanges{
     height: 20%;
     width: 20%;
     margin: 15px;
 }
-
 .listadetallealbum{
     display: flex;
     flex-wrap: wrap;
@@ -108,7 +92,6 @@ body{
     margin: 15px;
     list-style-type:disc;
 }
-
 .listas{
     display: flex;
     flex-wrap: wrap;
@@ -116,11 +99,9 @@ body{
     width: 100%;
     margin-right: 20px;
 }
-
 a{
     color: rgb(105, 112, 98);
 }
-
 .caja{
     width: 20%;
     background-color:black;
@@ -136,17 +117,20 @@ a{
     font-weight: bold;
     margin: 10px;
 }
-
 .caja img{
     width: 100%;
 }
-
 .fotos{
    /* width: 180px;
     height: 180px;*/
     border-radius: 90%;
     width: auto;
     height: 250px;
+}
+.login{
+    border-radius: 99%;
+    width: auto;
+    height: 50px;
 }
 footer{
    border:solid 8px black;
@@ -196,7 +180,6 @@ footer{
     border-radius: 10px;
     margin-bottom: 5px;
 }
-
 .contrasena{
     background-color: black;
     color:grey;
@@ -237,7 +220,6 @@ footer{
 .justin{
     color: cornsilk;
 }
-
 .nombre{
     color: rgb(105, 112, 98)
 }
@@ -256,17 +238,14 @@ footer{
     margin: 20px;
     border-radius: 15px;
 }
-
 .fotobob{
     border: 2px solid rgb(105, 112, 98);
     margin: 10px;
 }
-
 .bobtopfive{
     color: rgb(105, 112, 98);
     margin: 10px;
 }
-
 @keyframes cambio {
     0% {margin-left:0; }
     20% {margin-left:0; }
@@ -377,5 +356,4 @@ footer{
     border-radius: 90%;
     width: auto;
     height: 250px;
-
 }
