--- a/css/styles.css
+++ b/css/styles.css
@@ -85,14 +85,6 @@ body{
     width: 20%;
     margin: 15px;
 }
-.listadetallealbum{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    color: rgb(105, 112, 98);
-    margin: 15px;
-    list-style-type:disc;
-}
 .listas{
     display: flex;
     flex-wrap: wrap;
@@ -322,7 +314,7 @@ footer{
     margin-bottom: 20px;
 }
 .listadetallealbum{
-    background-color: black;
+
 }
 .detallestrack{
     width: 800px;
@@ -390,12 +382,17 @@ footer{
     margin-bottom: 30px;
 }
 .fav{
-    width: 90px; 
-    height: 40px;
+    width: 40px; 
+    height: 20px;
+    align-items: center;
 }
 .favx{
-    width:100%
-/*slideralbum*/
+    width: 40px; 
+    height: 20px;
+    border-radius: 10%;
+    margin-top: 20px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 /*playlist*/
 .playlist{
@@ -435,8 +432,8 @@ footer{
     align-items: center;
 }
 .fotopla{
-    width: 160px;
-    height: 80px;
+    width: 100px;
+    height: 50px;
     border-radius: 10%;
     margin-top: 20px;
 }
