--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ a{
     color: rgb(105, 112, 98);
     font-weight: bold;
     margin: 10px;
+    font-size: 1.2em;
 }
 .caja img{
     width: 100%;
@@ -213,13 +214,11 @@ footer{
 }
 .texto{
     margin: 15px;
+    text-decoration: none;
 }
 .button{
     width: auto;
     height: 22px;
-}
-.lupa{
-    height: 20px;
 }
 .artista{
     color: rgb(105, 112, 98);
@@ -384,9 +383,8 @@ footer{
     align-items: center;
 }
 .favx{
-    width: 40px; 
-    height: 20px;
-    margin: 15px;
+    width: 100%; 
+    margin-top: 5px;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
