--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,10 @@ footer{
     height: 20px;
     align-items: center;
 }
+.fav2{
+width: auto;
+height: 35px;
+}
 .favx{
     width: 100%; 
     margin-top: 5px;
