--- a/css/styles.css
+++ b/css/styles.css
@@ -42,15 +42,7 @@ li{
     text-decoration: none;
     margin: 15px;
 }
-.instagram{
-    width: 18%;
-    margin: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
+
 .container{
     background-color: black;
 
@@ -130,12 +122,31 @@ a{
     width: auto;
     height: 50px;
 }
-footer{
+
+/*footer*/
+.footer{
    border:solid 8px black;
    background-color: black;
    color: rgb(105, 112, 98);
-   text-align: center;
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
 }
+
+.seguinos{
+  width: 50%;
+  margin-top: 30px;  
+}
+
+.instagram{
+    width: 70px;
+}
+
+.nombre{
+    width: 50%;
+    margin-top: 30px;
+}
+
 .containergenerosg{
     background-color: rgb(31, 138, 84);
     border: solid 3px rgb(216, 9, 9);
