--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 1%;
     text-align: center;
 }
 .names{
@@ -453,4 +453,42 @@ height: 35px;
 .reproductor{
     margin-top: 10px;
     height: 25px;
+}
+
+/* diseño tablet */
+@media(max-width: 900px){
+    
+    main{
+        width: 100%;
+        text-align: center;
+        margin-top: 0%;
+    
+    }
+    .caja{
+        width:45%;
+        margin:2.5%;
+        
+    }
+    .listas{
+        justify-content: space-around;
+    }
+    .menu{
+        justify-content: space-around;
+    }
+    .logo{
+        display: none;
+    }
+    .buscar{
+        justify-content: space-around;
+        margin: 0%
+    }
+    .user{
+        margin-left: 0px;
+    }
+
+ 
+}
+/*diseño telefono*/
+@media(max-width: 450px){
+   
 }
