--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,8 @@ li{
 }
 .iniciars{
     margin: 10px;
-
 }
+
 header{
     background-color: black;
     
@@ -131,6 +131,7 @@ a{
 }
 .playlist{
     background-color: black;
+    border: blanchedalmond;
     
 }
 
@@ -418,6 +419,7 @@ a{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 .fotop{
     width: 180px;
     height: 180px;
