--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ a{
     font-weight: bold;
     margin: 20px;
     font-size: 1.2em;
+    text-align: center;
 }
 .caja img{
     width: 100%;
@@ -397,6 +398,7 @@ a{
     font-weight: bold;
     margin: 20px;
     font-size: 1.2em;
+    text-align: center;
 }
 .fotosd{
     width: 180px;
